--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,26 +9,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Unzip project
-        run: unzip usd_rub_realtime_app.zip
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x usd_rub_realtime_app/gradlew
-
-      - name: Build with Gradle
-        run: cd usd_rub_realtime_app && ./gradlew assembleDebug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug
-          path: usd_rub_realtime_app/app/build/outputs/apk/debug/app-debug.apk
+      - name: Checkout repository
+        uses: actions/checkout
