--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,4 +10,22 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Unzip project
+        run: unzip usd_rub_realtime_app.zip
+
+      - name: Build with Gradle
+        run: cd usd_rub_realtime_app && gradle assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: usd_rub_realtime_app/app/build/outputs/apk/debug/app-debug.apk
